# kevvy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PRD.md  PRD_TESTS.md  README.md  TODO.md  __init__.py  bot.py  command_debug.py  dev.sh  docker-compose.dev.yml  docker-compose.yml  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  docker-publish.yml  docker-scan.yml  python-tests.yml  semgrep.yml  sourcery.yml
cogs/: core_events_cog.py  cve_config.py  cve_lookup.py  tasks_cog.py
cve_search/: bot.py  cisa_kev_client.py  cve_monitor.py  db_utils.py  discord_log_handler.py  nvd_client.py  vulncheck_client.py  vulners_client.py
cve_search/cogs/: kev_commands.py
db/: init-db.js
docs/: CONTRIBUTING.md  SECURITY.md  index.md
docs/commands/: cve.md  index.md  kev.md  kevvy.md  verbose.md
kevvy/: bot.py  cisa_kev_client.py  cve_monitor.py  db_utils.py  discord_log_handler.py  nvd_client.py  stats_manager.py  vulncheck_client.py
kevvy/cogs/: __init__.py  core_events_cog.py  cve_info.py  cve_lookup.py  diagnostics.py  kev_commands.py  tasks_cog.py  utility_cog.py
tests/: conftest.py  test_bot.py  test_bot_lifecycle.py  test_bot_tasks.py  test_cisa_kev_integration.py  test_cve_lookup_cog.py  test_cve_monitor.py  test_db_utils.py  test_kev_commands.py  test_nvd_client_get_details.py  test_nvd_client_get_recent.py  test_on_message_edge_cases.py  test_on_message_error_handling.py  test_on_message_filtering.py  test_on_message_success_paths.py  test_utility_cog.py
