[project]
name = "kevvy"
version = "0.2.7"
description = "A Discord bot for searching the Common Vulnerabilities and Exposures (CVE) list and providing Known Exploitable Vulnerabilities (KEV) updates."
authors = [
    { name = "mauvehed", email = "mh@mvh.dev" }
]
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
dependencies = [
    "discord-py>=2.5.2,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "vulncheck-sdk>=0.0.12,<0.1.0",
    "aiohttp>=3.11.18,<4.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.8,<0.12.0",
    "pytest>=8.2.2,<9.0.0",
    "pytest-asyncio>=0.26.0,<0.27.0",
    "mkdocs>=1.6.1,<2.0.0",
    "pytest-cov>=6.1.1,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-aiohttp>=1.0.5,<2.0.0"
]
sourcery = [
    "sourcery-cli<1.20"
]

[tool.poetry]
# Minimal poetry config for build-system, actual metadata and deps are in [project]
packages = [{ include = "kevvy" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
