[tool.poetry]
name = "kevvy"
version = "0.2.7"
description = "A Discord bot for searching the Common Vulnerabilities and Exposures (CVE) list and providing Known Exploitable Vulnerabilities (KEV) updates."
authors = ["mauvehed <mh@mvh.dev>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "kevvy" }]

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.5.2"
python-dotenv = "^1.1.0"
vulncheck-sdk = "^0.0.13"
aiohttp = "^3.12.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
pytest = "^8.4.0"
pytest-asyncio = "^0.26.0"
mkdocs = "^1.6.1"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.1"
pytest-aiohttp = "^1.0.5"

[tool.poetry.group.sourcery.dependencies]
sourcery-cli = "<1.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
